--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,24 @@
   </build>  
  </profile>
   
+  <profile>
+     <id>batch</id>
+   <build>
+   <plugins>  
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.5.3</version>
+        <configuration>
+          <suiteXmlFiles>
+            <suiteXmlFile>testng-BatchExecution.xml</suiteXmlFile>
+          </suiteXmlFiles>
+        </configuration>
+      </plugin>
+  </plugins>
+  </build>  
+ </profile>
+  
  </profiles> 
   
 </project>
